--- a/package.json
+++ b/package.json
@@ -3,21 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "1.7.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.0",
+    "@types/react-slick": "^0.23.7",
+    "axios": "0.25.0",
+    "bootstrap": "^5.1.3",
+    "node-sass": "^6.0.1",
+    "query-string": "7.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "7.21.2",
+    "react-redux": "7.2.6",
+    "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "8.1.0",
+    "redux": "4.1.2",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "0.32.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=2507 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
