--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.0",
-    "@types/react-slick": "^0.23.7",
+    "@types/react-redux": "^7.1.22",
     "axios": "0.25.0",
     "bootstrap": "^5.1.3",
     "node-sass": "^6.0.1",
@@ -31,7 +31,7 @@
     "yup": "0.32.1"
   },
   "scripts": {
-    "start": "set PORT=2507 && react-scripts start",
+    "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
