--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@types/react-redux": "^7.1.22",
     "axios": "0.25.0",
     "bootstrap": "^5.1.3",
+    "i18next": "^21.6.11",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.3.2",
     "node-sass": "^6.0.1",
     "query-string": "7.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "7.21.2",
+    "react-i18next": "^11.15.4",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
