--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "query-string": "7.1.0",
     "react": "^17.0.2",
